// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error for invalid submission 1`] = `
<div>
  <h2>
    Select Your Race
  </h2>
  <p>
    Please select a race
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="dwarf"
        />
        Dwarf
      </label>
    </div>
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="elf"
        />
        Elf
      </label>
    </div>
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="halfling"
        />
        Halfling
      </label>
    </div>
    <label>
      <input
        checked={false}
        name="race"
        onChange={[Function]}
        type="radio"
        value="human"
      />
      Human
    </label>
    <button>
      Next Step
    </button>
  </form>
</div>
`;

exports[`should render race form with low constitution (dwarf disabled) 1`] = `
<div>
  <h2>
    Select Your Race
  </h2>
  <form
    onSubmit={[Function]}
  >
    <p>
      Dwarf: Your ability scores are insufficient
    </p>
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="elf"
        />
        Elf
      </label>
    </div>
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="halfling"
        />
        Halfling
      </label>
    </div>
    <label>
      <input
        checked={false}
        name="race"
        onChange={[Function]}
        type="radio"
        value="human"
      />
      Human
    </label>
    <button>
      Next Step
    </button>
  </form>
</div>
`;

exports[`should render race form with low dexterity (halfling disabled) 1`] = `
<div>
  <h2>
    Select Your Race
  </h2>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="dwarf"
        />
        Dwarf
      </label>
    </div>
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="elf"
        />
        Elf
      </label>
    </div>
    <p>
      Halfling: Your ability scores are insufficient
    </p>
    <label>
      <input
        checked={false}
        name="race"
        onChange={[Function]}
        type="radio"
        value="human"
      />
      Human
    </label>
    <button>
      Next Step
    </button>
  </form>
</div>
`;

exports[`should render race form with low intelligence (elf disabled) 1`] = `
<div>
  <h2>
    Select Your Race
  </h2>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="dwarf"
        />
        Dwarf
      </label>
    </div>
    <p>
      Elf: Your ability scores are insufficient
    </p>
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="halfling"
        />
        Halfling
      </label>
    </div>
    <label>
      <input
        checked={false}
        name="race"
        onChange={[Function]}
        type="radio"
        value="human"
      />
      Human
    </label>
    <button>
      Next Step
    </button>
  </form>
</div>
`;

exports[`should render race form with props (all options enabled) 1`] = `
<div>
  <h2>
    Select Your Race
  </h2>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="dwarf"
        />
        Dwarf
      </label>
    </div>
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="elf"
        />
        Elf
      </label>
    </div>
    <div>
      <label>
        <input
          checked={false}
          name="race"
          onChange={[Function]}
          type="radio"
          value="halfling"
        />
        Halfling
      </label>
    </div>
    <label>
      <input
        checked={false}
        name="race"
        onChange={[Function]}
        type="radio"
        value="human"
      />
      Human
    </label>
    <button>
      Next Step
    </button>
  </form>
</div>
`;

exports[`should render race form without props (character not found) 1`] = `<NotFoundPage />`;
